[project]
name = "microbleednet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
  "nibabel",
  "scipy",
  "torch",
  "numpy",
  "scikit-image",
  "scikit-learn",
  "tqdm"
]

[project.scripts]
microbleednet = "microbleednet.console_commands.microbleednet:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

